# huffman

./: CMakeLists.txt
lib/huffman-lib/: CMakeLists.txt  frequency.cpp  huffman_decoder.cpp  huffman_encoder.cpp  huffman_tree.cpp
lib/huffman-lib/include/: frequency.h  huffman_code.h  huffman_consts.h  huffman_decoder.h  huffman_encoder.h  huffman_tree.h  packager.h
src/: buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  compress_utills.cpp  compress_utills.h  main.cpp
test/: huffman_testing.cpp  randomizer.cpp  randomizer.h
